--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 # StudentWebsites
 
-<a href="/U6Website/House1.html">Aaron Hafner</a>
+<a href="https://hafneraaron.github.io/StudentWebsites/U6Website/House1.html">Aaron Hafner</a>
