--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 # StudentWebsites
 
-Amy Hutwelker 
-<a href="https://github.com/hutwelkera">hutwalker</a>
+Jonathan Rickert
+<a href="https://github.com/rickertjonathan">Website</a>
 
 
 <a href="/House1.html">Aaron Hafner</a>
