--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ Jonathan Rickert
 
 <a href="/House1.html">Aaron Hafner</a>
 
+<a href="https://mrmclaughlin.com/webdesign/LundW/FinalWebsiteProjecthomepage.html"></a>
